--- a/my_website/aboutMe.html
+++ b/my_website/aboutMe.html
@@ -9,11 +9,21 @@
       <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="aboutMe.html">About Me</a>
-      <h1>About Me</h1>
-      <p>I have...</p>
-      <p>been to australia</p>
-      <p>played trumpet for 8 years</p>
-      <p>tried to cordinate a group effort on making a video game in c++ with two friends</p>
-      <p>made an about me page on a website</p>
+      <table style = "width:100%">
+      <tr>
+        <th>I have...</th>
+      </tr>
+      <tr>
+        <td>been to australia</td>
+      </tr>
+      <tr>
+        <td>played trumpet for 8 years</td>
+      </tr>
+      <tr>
+        <td>tried to cordinate a group effort on making a video game in c++ with two friends</td>
+      </tr>
+      <tr>
+        <td>made an about me page on a website</td>
+      </tr>
   </body>
 </html>
