--- a/my_website/aboutMe.html
+++ b/my_website/aboutMe.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="format.css">
     <title>Portfolio</title>
   </head>
   
