--- a/my_website/index.html
+++ b/my_website/index.html
@@ -12,8 +12,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutMe.html">About Me</a>
-    <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <h1>Home</h1>
   </body>
   
 </html>
