--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <td>Scratch Project</td>
-        <td><img src="images/scratchGame.png" height="250"></td>
+        <td><img scratchGame.png></td>
         <td><a href="https://scratch.mit.edu/projects/174081187/">https://scratch.mit.edu/projects/174081187/</a></td>
       </tr>
   </table>
