Added Calculator Project

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -24,8 +24,13 @@
       </tr>
       <tr>
         <td>Scratch Project</td>
-        <td><img scratchGame.png></td>
+        <td><img src = "images/scratchGame.png"height = "200"></td>
         <td><a href="https://scratch.mit.edu/projects/174081187/">https://scratch.mit.edu/projects/174081187/</a></td>
+      </tr>
+      <tr>
+        <td>Calculator App</td>
+        <td><img src = "images/calculatorApp.png"height ="200"></td>
+        <td><a href="AppInventor/DeltaVCalculatorApp.aia">App Download</a></td>
       </tr>
   </table>
   </body>
