--- a/my_website/aboutMe.html
+++ b/my_website/aboutMe.html
@@ -10,6 +10,7 @@
       <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="aboutMe.html">About Me</a>
+      <h1>About Me</h1>
       <table style = "width:100%">
       <tr>
         <th>I have...</th>
