--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -30,7 +30,7 @@
       <tr>
         <td>Calculator App</td>
         <td><img src = "images/calculatorApp.png"height ="200"></td>
-        <td><a href="AppInventor/DeltaVCalculatorApp.aia">App Download</a></td>
+        <td><a href="AppInventor/DeltaVCalculatorApp.apk">App Download</a></td>
       </tr>
   </table>
   </body>
