Added Final Project

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -11,11 +11,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutMe.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-    <img src="images/scratchlogo.png" height="100">
-    </a>
   <table style = "width:100%">
       <tr>
         <th>Project Name</th>
@@ -30,7 +25,12 @@
       <tr>
         <td>Calculator App</td>
         <td><img src = "images/calculatorApp.png"height ="200"></td>
-        <td><a href="AppInventor/DeltaVCalculatorApp.apk">App Download</a></td>
+        <td><a href="AppInventor/DeltaVCalculatorApp.apk" download>App Download</a></td>
+      </tr>
+      <tr>
+        <td>Final Project</td>
+        <td><img src = "images/GroupOrganizer.png"height = "200"></td>
+        <td><a href="Slideshows/Engineering Final Presintation"download>Slideshow Download</a> and <a href="AppInventor/Group_Organizer_V1_0.apk" download>App Download</a></td>
       </tr>
   </table>
   </body>
